# CodeX-responses-chat-proxy

./: .env.example  .gitignore  LICENSE  OpenAI_Responses_接口与_Chat_接口调用方式及转换方式差异分析报告.md  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/: build_exe.ps1  build_macos.sh  launcher_entry.py
src/responses_chat_proxy/: __init__.py  __main__.py  config.py  errors.py  launcher.py  logger.py  main.py  upstream.py
src/responses_chat_proxy/adapters/: __init__.py  request_adapter.py  response_adapter.py  streaming_adapter.py
tests/: test_adapters.py  test_launcher.py  test_main.py
